Add/Update endpoints config on backend
