# cogboard-app/src/main/kotlin/com/cognifide/cogboard/config/handler/UpdateEndpoints.kt
@@ -1,0 +1,22 @@
+package com.cognifide.cogboard.config.handler
+
+import com.cognifide.cogboard.CogboardConstants
+import io.knotx.server.api.handler.RoutingHandlerFactory
+import io.vertx.core.Handler
+import io.vertx.core.json.JsonObject
+import io.vertx.reactivex.core.Vertx
+import io.vertx.reactivex.ext.web.RoutingContext
+
+class UpdateEndpoints : RoutingHandlerFactory {
+
+    override fun getName(): String = "endpoints-update-handler"
+
+    override fun create(vertx: Vertx?, config: JsonObject?): Handler<RoutingContext> = Handler { event ->
+        vertx
+                ?.eventBus()
+                ?.publish(CogboardConstants.EVENT_UPDATE_ENDPOINTS_CONFIG, event.body.toJsonObject())
+        event
+                .response()
+                .end(config?.getJsonObject("body", CogboardConstants.errorResponse())?.encode())
+    }
+}
